# lighthouse

./: .gitignore  .gitmodules  CMakeLists.txt  flash_ota.sh  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  common.h  doublereset.c  doublereset.cpp  doublereset.h  encoder.cpp  encoder.h  leds.c  leds.cpp  leds.h  main.c  main.cpp  main.h  motor.cpp  motor.h  osc.cpp  oskp.cpp  oskp.h  wifi.c  wifi.cpp  wifi.h
main/web/: index.html
